; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-lobj.c_lo_hton64.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-lobj.c_lo_hton64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.anon = type { [2 x i8*] }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @lo_hton64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lo_hton64(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %union.anon, align 8
  %4 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = ashr i32 %5, 32
  %7 = sext i32 %6 to i64
  %8 = inttoptr i64 %7 to i8*
  store i8* %8, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* @pg_hton32(i8* %9)
  %11 = bitcast %union.anon* %3 to [2 x i8*]*
  %12 = getelementptr inbounds [2 x i8*], [2 x i8*]* %11, i64 0, i64 0
  store i8* %10, i8** %12, align 8
  %13 = load i32, i32* %2, align 4
  %14 = sext i32 %13 to i64
  %15 = inttoptr i64 %14 to i8*
  store i8* %15, i8** %4, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = call i8* @pg_hton32(i8* %16)
  %18 = bitcast %union.anon* %3 to [2 x i8*]*
  %19 = getelementptr inbounds [2 x i8*], [2 x i8*]* %18, i64 0, i64 1
  store i8* %17, i8** %19, align 8
  %20 = bitcast %union.anon* %3 to i32*
  %21 = load i32, i32* %20, align 8
  ret i32 %21
}

declare dso_local i8* @pg_hton32(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
